2007-09-18  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.16 TAGGED FOR RELEASE ***

	* changes: updates for 8.4.16 release.

2007-09-15  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): 	replace direct use of '/usr/ccs/bin/ld'
					in SHLIB_LD by 'cc' compiler driver.
	* unix/configure: autoconf-2.13

2007-09-11  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overrun that got triggered by
	multi-frame interlaced GIFs that contain subsequent frames that
	are smaller than the first one.

	* tests/imgPhoto.test: Added a test for the above.

2007-09-11  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in:	backport of TK_INCLUDE_SPEC addition.
	* unix/tkConfig.sh.in:	[Bug 777203]
	* unix/configure: autoconf-2.13

2007-09-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Fix for AMD64 symbols target builds.
	* win/rules.vc:

2007-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rc/tk_base.rc: Backported the BASE_NO_TK_ICON patch to assist in
	creating tclkits and/or basekits with corrent resources.

2007-09-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/wm.test: -transparentcolor added to windows wm attributes tests

2007-08-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (Tk_ChooseColorObjCmd): correct setting of
	interp result [Bug 1782105]; fix -initialcolor overwriting last color
	selection; style cleanup.

2007-08-07  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:	add support for compile flags specific to
				object files linked directly into executables.

	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
	use -mdynamic-no-pic flag for object files linked directly into exes.

	* unix/configure: autoconf-2.13

2007-07-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDialog.c (NavServicesGetFile): reset interp result on
	nav dialog cancel. [Bug 1743786]
